# Elma

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: FindEmbree.cmake
Data/Scenes/cbox/: cbox.xml
Sources/: main.cpp
Sources/Elma/: Camera.cpp  Camera.hpp  Elma.hpp  Error.hpp  Filter.cpp  Filter.hpp  Frame.hpp  Image.cpp  Image.hpp  Intersection.cpp  Intersection.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Matrix.hpp  Medium.cpp  Medium.hpp  Microfacet.hpp  Mipmap.hpp  Parallel.cpp  Parallel.hpp  PathTracing.hpp  Pcg.hpp  PhaseFunction.cpp  PhaseFunction.hpp  PointAndNormal.hpp  ProgressReporter.hpp  Ray.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Shape.cpp  Shape.hpp  Spectrum.hpp  TableDist.cpp  TableDist.hpp  Texture.hpp  Timer.hpp  (+9 more)
Sources/Elma/Common/: Application.cpp  Application.hpp  Defines.hpp  Enums.hpp  Error.cpp  Error.hpp  Inputs.hpp  Logger.cpp  Logger.hpp  Object.cpp  Object.hpp  Screen.cpp  Screen.hpp  Terminal.hpp  Windows.cpp  Windows.hpp  imgui_impl_glfw.cpp
Sources/Elma/Filters/: Box.inl  Gaussian.inl  Tent.inl
Sources/Elma/Lights/: DiffuseAreaLight.inl  Envmap.inl
Sources/Elma/Materials/: DisneyBSDF.inl  DisneyClearcoat.inl  DisneyDiffuse.inl  DisneyGlass.inl  DisneyMetal.inl  DisneySheen.inl  Lambertian.inl  RoughDielectric.inl  RoughPlastic.inl
Sources/Elma/Media/: Heterogeneous.inl  Homogeneous.inl
Sources/Elma/Parsers/: LoadSerialized.cpp  LoadSerialized.hpp  ParseObj.cpp  ParseObj.hpp  ParsePly.cpp  ParsePly.hpp  ParseScene.cpp  ParseScene.hpp  ShapeUtils.hpp
Sources/Elma/PhaseFunctions/: HenyeyGreenstein.inl  Henyeygreenstein.inl  Isotropic.inl
Sources/Elma/Shapes/: Sphere.inl  TriangleMesh.inl
Tests/: CMakeLists.txt  filter.cpp  frame.cpp  image.cpp  intersection.cpp  materials.cpp  matrix.cpp  mipmap.cpp
